obsidian-remote/app/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: obsidian-remote
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.middlewares: traefik-forward-auth@kubernetescrd
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
    - hosts:
        - obsidian.traunseenet.com
      secretName: letsencrypt-prod-obsidian
  rules:
    - host: obsidian.traunseenet.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: obsidian-remote
                port:
                  name: web
